@@ -1,5 +1,20 @@
-Title: Chess Application
+#Project: JavaFX Chess Application
 
-Description:
+##Description: A chess program made outside of school that allows the user to play games of chess with themself and view the moves.
 
-I made chess in java 
+
+When development is complete, I will add a downloadable program available for anyone to try. 
+
+To see the application currently, see the video or set up the project yourself:
+
+#Steps to set up the project:
+
+- Clone the repository
+- Open the project in intelliJ IDEA
+- If you do not have JavaFX bundled with your JDK, you will need to download it and add it as a library to the project structure
+- Configure JavaFX in run configurations: add the following link in the VM Options field in + > Application > VM options: --module-path PATH --add-modules javafx.controls,javafx.fxml (replacing PATH with the path to the lib directory in the JavaFX SDK folder.
+
+- Launch the GameApplication file and view the project!  
+
+
+#**Note: This project is currently in active development. New features and bug fixes are being worked on.**
